...
  "adminDeletedSchool": "School deleted",
  "adminDeleteGroup": "Delete group?",
  "adminDeleteGroupConfirmation": "Are you sure you want to delete this group?",
  "adminDeleteSchool": "Delete school?",
  "adminDeleteUsers": "Delete users",
  "adminDeleting": "Deleting",
  "adminDeletingError": "Error while deleting",
  "adminDescription": "Description",
  "adminEdit": "Edit",
  "adminEditAssociation": "Edit association : {associationName}",
  "@adminEditAssociation": {
    "description": "Edit association",
    "placeholders": {
...
  "paiementDeviceNotRegistered": "Device not registered",
  "paiementDeviceNotRegisteredDescription": "Your device is not registered yet. \nTo register it, please go to the devices page.",
  "paiementDeviceRecoveryError": "Error while retrieving device",
  "paiementDeviceRevoked": "Device revoked",
  "paiementDeviceRevokingError": "Error while revoking device",
  "paiementDevices": "Devices",
  "paiementDoneTransaction": "Transaction completed",
  "paiementDownload": "Download",
  "paiementEditStore": "Edit store {store}",
  "@paiementEditStore": {
    "description": "Text to edit a store",
    "placeholders": {
      "store": {
...
  "paiementPersonalBalance": "Personal balance",
  "paiementPleaseAcceptPopup": "Please allow popups",
  "paiementPleaseAcceptTOS": "Please accept the Terms of Service.",
  "paiementPleaseAddDevice": "Please add this device to pay",
  "paiementPleaseAuthenticate": "Please authenticate",
  "paiementPleaseEnterMinAmount": "Please enter an amount greater than 1",
  "paiementPleaseEnterValidAmount": "Please enter a valid amount",
  "paiementProceedSuccessfully": "Payment completed successfully",
  "paiementQRCodeAlreadyUsed": "QR Code already used",
  "paiementReactivateRevokedDeviceDescription": "Your device has been revoked. \nTo reactivate it, please go to the devices page.",
  "paiementReceived": "Received",
  "paiementRefund": "Refund",
  "paiementRefundAction": "Refund",
  "paiementRefundedThe": "Refunded on",
  "paiementRefuse": "Refuse",
  "paiementRefused": "Refused",
  "paiementRefusedTransaction": "Payment refused",
  "paiementRefuseTransaction": "Refuse transaction",
...
